--- a/client/gallery.html
+++ b/client/gallery.html
@@ -15,10 +15,14 @@
       <h2>Flickr Image Gallery</h2>
     </div>
     <div class="box b photos">
-      <img id="lead-photo" align="middle">
+      <img src="images/toy.png" id="lead-photo" align="middle">
     </div>
     <div class="box c">
-      <h2>Next Image</h2>
+      <h2>Enter Tag</h2>
+      <p>
+      <input type = "text" id = "textInput">
+      </p>
+      <br>
       <button>Go!</button>
       <div></div>
     </div>
